log
Thu 28 Mar 2024 09:10:15 PM UTC: 
 tests:  0|6
total_score: 0/70
94dac12
Fri 29 Mar 2024 05:27:52 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
0d8073d
Fri 29 Mar 2024 06:15:46 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
0c1e115
Fri 29 Mar 2024 06:20:09 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|0
   [ INFO ] llamando a firstList
cc4b470
Fri 29 Mar 2024 06:20:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d2eca2f
Fri 29 Mar 2024 06:23:01 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:49:10: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   49 |   return current -> next -> dato;
      |          ^~~~~~~
      |          popCurrent
list.c:49:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cb156b0
Fri 29 Mar 2024 06:23:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:49:37: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   49 |   return list -> current -> next -> dato;
      |                                     ^~~~
      |                                     data
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
04ebd4e
Fri 29 Mar 2024 06:23:32 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
c6513a4
Fri 29 Mar 2024 06:23:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b588d00
Fri 29 Mar 2024 06:26:42 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
143379f
Fri 29 Mar 2024 06:34:41 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
3cd6ac3
Fri 29 Mar 2024 06:36:06 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
949400f
Fri 29 Mar 2024 06:36:35 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
4193235
Fri 29 Mar 2024 06:37:37 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
fc5b5a3
Fri 29 Mar 2024 06:40:26 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
cef98d5
Fri 29 Mar 2024 08:41:54 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:64:14: error: ‘NUll’ undeclared (first use in this function); did you mean ‘NULL’?
   64 |   if(list == NUll || list -> current == NULL || list -> current -> prev == NULL) return NUll;
      |              ^~~~
      |              NULL
list.c:64:14: note: each undeclared identifier is reported only once for each function it appears in
list.c:66:3: error: statement with no effect [-Werror=unused-value]
   66 |   list current = list -> current -> prev;
      |   ^~~~
list.c:66:7: error: expected ‘;’ before ‘current’
   66 |   list current = list -> current -> prev;
      |       ^~~~~~~~
      |       ;
cc1: all warnings being treated as errors
Compilation failed
57179eb
